; ModuleID = '/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_test_delete_while_playback.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_test_delete_while_playback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.media_params = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"delete_while_playback (start: %d)\0A\00", align 1
@VLC_PLAYER_LOCK_NORMAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"media1\00", align 1
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @test_delete_while_playback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_delete_while_playback(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.media_params, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @test_log(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @VLC_PLAYER_LOCK_NORMAL, align 4
  %13 = call i32* @vlc_player_New(i32* %11, i32 %12, i32* null, i32* null)
  store i32* %13, i32** %5, align 8
  %14 = call i32 @VLC_TICK_FROM_SEC(i32 10)
  %15 = call i32 @DEFAULT_MEDIA_PARAMS(i32 %14)
  %16 = getelementptr inbounds %struct.media_params, %struct.media_params* %6, i32 0, i32 0
  store i32 %15, i32* %16, align 4
  %17 = call i32* @create_mock_media(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), %struct.media_params* %6)
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = ptrtoint i32* %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @vlc_player_Lock(i32* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @vlc_player_SetCurrentMedia(i32* %23, i32* %24)
  store i32 %25, i32* %8, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* @VLC_SUCCESS, align 4
  %28 = icmp eq i32 %26, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @input_item_Release(i32* %31)
  %33 = load i32, i32* %4, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %43

35:                                               ; preds = %2
  %36 = load i32*, i32** %5, align 8
  %37 = call i32 @vlc_player_Start(i32* %36)
  store i32 %37, i32* %8, align 4
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* @VLC_SUCCESS, align 4
  %40 = icmp eq i32 %38, %39
  %41 = zext i1 %40 to i32
  %42 = call i32 @assert(i32 %41)
  br label %43

43:                                               ; preds = %35, %2
  %44 = load i32*, i32** %5, align 8
  %45 = call i32 @vlc_player_Unlock(i32* %44)
  %46 = load i32*, i32** %5, align 8
  %47 = call i32 @vlc_player_Delete(i32* %46)
  ret void
}

declare dso_local i32 @test_log(i8*, i32) #1

declare dso_local i32* @vlc_player_New(i32*, i32, i32*, i32*) #1

declare dso_local i32 @DEFAULT_MEDIA_PARAMS(i32) #1

declare dso_local i32 @VLC_TICK_FROM_SEC(i32) #1

declare dso_local i32* @create_mock_media(i8*, %struct.media_params*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i32 @vlc_player_SetCurrentMedia(i32*, i32*) #1

declare dso_local i32 @input_item_Release(i32*) #1

declare dso_local i32 @vlc_player_Start(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1

declare dso_local i32 @vlc_player_Delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
